obeserver pattern added

--- a/VehicleInspection/nbproject/private/private.properties
+++ b/VehicleInspection/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Citrix\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/afs/kth.se/home/tmp/1009/tmpuser-10211/.netbeans/8.1/build.properties
